This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

20/03/2006
SPoG
- Fixed crash when resetting preferences after startup failure.
- Fixed crash on next-leak-spot with build-monitoring enabled.
- Fixed doom3/quake4 blended-decal rendering when toggling lighting mode.
- Fixed fit-texture with rotated texture transforms.

20/03/2006
SPoG
- Changed Copy/Paste to work on face textures if any faces are selected.
- Fixed GTK_WIDGET_REALIZED assert when selecting entities (linux).

28/02/2006
namespace, SPoG
- Added drag-resizing for doom3/quake4 light_radius boxes.

25/02/2006
SPoG
- Fixed objects sometimes dissappearing when at high zoom level in Ortho views.

24/02/2006
SPoG
- Added GPL text to win32 installer.
- Fixed gtk wimp theme not working after using gtkthemeselector.

21/02/2006
namespace
- Added command to toggle lighting/textured modes, shortcut F3.

20/02/2006
SPoG
- Fixed crash when disabling lighting for a second time.

19/02/2006
SPoG
- Fixed crash when loading invalid ASE models.

11/02/2006
SPoG
- Added install.py script.
- Updated COMPILING instructions.
- Fixed transparency rendering on quake3 shaders.
- Fixed hint/caulk filtering for Jedi Academy shaders.

04/02/2006
SPoG
- Added Radiant Manual shortcut to win32 installation.
- Added 'use alternative texture projection' option to prefs.
- Fixed caching bug causing import-map to not reload modified maps.
- Added blended-decal rendering for doom3 and quake4.

30/01/2006
SPoG
- Added expand-selection-to-entities with default shortcut ctrl+alt+e.
- Fixed crash in gtk file-chooser with some versions of GTK+.

29/01/2006
SPoG
- Changed create-group-entity to re-select brushes after creation.

26/01/2006
SPoG
- Changed far-clip-plane setting to increase exponentially with distance.
- Fixed selected entities moving when drag-resizing brushes.
- Changed patches to be selectable from the back in wireframe views.